bungi wars fixes

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -926,7 +926,7 @@
  decision_embargo_the_ostemers_title: "Embargo the Ostemer merchants"
  decision_embargo_the_ostemers_desc: "For far too long the Silvestrian domianted the Ostsee. We will finally show the empire that it can no longer maintain its monopoly over the regional trade."
  decision_embargo_the_ostemers_tt: "This may lead to a full-blown war against the Empire!"
- incident_empire_embargoed: "Embargo on the Empire Embargo"
+ incident_empire_embargoed: "Embargo on the Empire"
  incident_empire_unembargoed: "Unified Merchant Guild"
  incident_empire_embargoed_uno_reverse: "Imperial Embargo"
 
