--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -120,6 +120,7 @@
 
  heisean_nation_title: "Reunite Heisean @HEI"
  heisean_nation_desc: "Warring states of Heisean have been relentlessly fighting each other for the past century. Now we will restore the mantle of Great Heisean."
+ has_unlocked_decision_heisean_nation_tt: "Has unlocked §YReunite Heisean§! decision through winning §YBungi Wars§!"
 
  khantadun_nation_title: "Unite Khantadun @KHA"
  khantadun_nation_desc: "Safe valley of Khantadun allowed us to prosper without the need of major conflicts which lead to massive decentralization, but if we want to break free from Paraderavi control we must unite."
