--- a/localisation/TD_01_Flavour_Heisean_l_english.yml
+++ b/localisation/TD_01_Flavour_Heisean_l_english.yml
@@ -64,64 +64,65 @@
  merc_heisen_bandits: "Heisen Bandits"
 
  
- heisean.0.t: "REPLACE_ME"
+ unlock_merc_heisen_bandits: "Unlock the mercenary company §YHeisen Bandits§! to recruit."
+ heisean.0.t: "Countryside banditry"
  heisean.0.desc: "REPLACE_ME"
- until_dealt_with_tt: "REPLACE_ME"
- heisean.0.a: "REPLACE_ME"
- heisean.1.t: "REPLACE_ME"
+ until_dealt_with_tt: "until properly dealt with"
+ heisean.0.a: "Sooner or later they will all be crushed."
+ heisean.1.t: "Restoring Monarchy"
  heisean.1.desc: "REPLACE_ME"
- heisean.1.a: "REPLACE_ME"
- heisean.1.b: "REPLACE_ME"
- heisean.1.c: "REPLACE_ME"
- heisean.2.t: "REPLACE_ME"
+ heisean.1.a: "Monarchy must be brough back!"
+ heisean.1.b: "The empire will be holier than ever."
+ heisean.1.c: "We don't need to reform our government."
+ heisean.2.t: "Abandoning our Roots"
  heisean.2.desc: "REPLACE_ME"
- heisean.2.a: "REPLACE_ME"
- cant_unify_heisean_tt: "REPLACE_ME"
- heisean.2.b: "REPLACE_ME"
- heisean.101.t: "REPLACE_ME"
+ heisean.2.a: "We will move on"
+ cant_unify_heisean_tt: "You will NOT be able to unify Heisean."
+ heisean.2.b: "On the second thought..."
+ heisean.101.t: "Bungi Wars"
  heisean.101.desc: "REPLACE_ME"
- heisean.101.a: "REPLACE_ME"
- heisean.102.t: "REPLACE_ME"
+ heisean.101.a: "We must endure the darkest of times"
+ heisean.102.t: "Bells of Wars"
  heisean.102.desc: "REPLACE_ME"
- heisean_bell_metal_cannons: "REPLACE_ME"
- desc_heisean_bell_metal_cannons: "REPLACE_ME"
- heisean.102.a: "REPLACE_ME"
- heisean.102.b: "REPLACE_ME"
- heisean_pious_warlord: "REPLACE_ME"
- desc_heisean_pious_warlord: "REPLACE_ME"
- heisean.103.t: "REPLACE_ME"
+ heisean_bell_metal_cannons: "Bell metal cannons"
+ desc_heisean_bell_metal_cannons: "Our makeshift cannons are good enough for the battlefield."
+ heisean.102.a: "Melt the Bells"
+ heisean.102.b: "Respect the Temples"
+ heisean_pious_warlord: "A pious warlord"
+ desc_heisean_pious_warlord: "Who needs cannons during a war anyway?"
+ heisean.103.t: "Raided Farmlands"
  heisean.103.desc: "REPLACE_ME"
- heisean.103.a: "REPLACE_ME"
- heisean.103.b: "REPLACE_ME"
- heisean.104.t: "REPLACE_ME"
+ heisean.103.a: "We can't protect everybody"
+ heisean.103.b: "Recompensate the farmers"
+ heisean.104.t: "Rebellious Noble"
  heisean.104.desc: "REPLACE_ME"
- heisean.104.a: "REPLACE_ME"
- heisean.104.b: "REPLACE_ME"
- heisean.105.t: "REPLACE_ME"
+ heisean.104.a: "Fine, just give him some unimportant office"
+ heisean.104.b: "Who does he thing he is?"
+ heisean.105.t: "An Unlikely Alliance"
  heisean.105.desc: "REPLACE_ME"
- heisean.105.a: "REPLACE_ME"
- heisean.105.b: "REPLACE_ME"
- heisean.106.t: "REPLACE_ME"
+ heisean.105.a: "This might be the best course of action..."
+ heisean.105.b: "We will never cooperate with freebooters!"
+ heisean.106.t: "Local Defeat Rebels"
  heisean.106.desc: "REPLACE_ME"
- heisean.106.a: "REPLACE_ME"
- heisean.106.b: "REPLACE_ME"
- heisean.107.t: "REPLACE_ME"
+ heisean.106.a: "Let's leave them - for now..."
+ heisean.106.b: "Outrageous!"
+ heisean.107.t: "Shifting Allegiances"
  heisean.107.desc: "REPLACE_ME"
- heisean.107.a: "REPLACE_ME"
- heisean.107.b: "REPLACE_ME"
- heisean.108.t: "REPLACE_ME"
+ heisean.107.a: "Bribe him back"
+ heisean.107.b: "We will crush them all!"
+ heisean.108.t: "Shifting Allegiances"
  heisean.108.desc: "REPLACE_ME"
- heisean.108.a: "REPLACE_ME"
- heisean.108.b: "REPLACE_ME"
- heisean.108.c: "REPLACE_ME"
- heisean.109.t: "REPLACE_ME"
+ heisean.108.a: "Let's accept his request"
+ heisean.108.b: "We should strike as soon as we can!"
+ heisean.108.c: "No, i don't think i will"
+ heisean.109.t: "Support from the Nobles"
  heisean.109.desc: "REPLACE_ME"
- heisean.109.a: "REPLACE_ME"
- heisean.109.b: "REPLACE_ME"
- heisean.110.c: "REPLACE_ME"
- heisean.110.t: "REPLACE_ME"
+ heisean.109.a: "Our court needs some bright minded people"
+ heisean.109.b: "We need officers to put an end to the civil war"
+ heisean.110.c: "Thank for their support, don't request anything"
+ heisean.110.t: "Nobility displeased"
  heisean.110.desc: "REPLACE_ME"
- heisean.110.a: "REPLACE_ME"
- heisean.200.t: "REPLACE_ME"
+ heisean.110.a: "These nobles will destroy me quicker than other warlords..."
+ heisean.200.t: "End of the Civil War"
  heisean.200.desc: "REPLACE_ME"
- heisean.200.a: "REPLACE_ME"
+ heisean.200.a: "We will rebuild."
