Daslavenia setup part 1
It begins

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1082,3 +1082,15 @@
  cedodak_area: "Cedodak"
  bukatar_area: "Bukatar"
  yinnaya_area: "Yinnaya"
+ 
+ kurkutalshukh_area: "Kurkutalshukh"
+ lesova_area: "Lesova"
+ granitsekopn_area: "Granitsekopn"
+ vostochna_kraina_area: "Vostochna Kraina"
+ poladna_kraina_area: "Poladna Kraina"
+ velypshen_predni_area: "Velypshen Predni"
+ vakeposi_kurkutal_area: "Vakeposi Kurkutal"
+ zhelene_pobrezhe_area: "Zhelene Pobrezhe"
+ morvania_proper_area: "Morvania Proper"
+ nazadna_kraina_area: "Nazadna Kraina"
+ geniburghi_frontier_area: "Geniburghi Frontier"
