--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -313,7 +313,7 @@
  PROV312: "Gyruzygety"
  PROV313: "Hurkhzan"
  PROV314: "Karisar"
- PROV315: ""
+ PROV315: "Zlatodvor"
  PROV316: ""
  PROV317: "Bukutyer"
  PROV318: ""
@@ -1286,7 +1286,7 @@
  PROV1285: "Kvaitis"
  PROV1286: "Orosedea"
  PROV1287: "Karastekhi"
- PROV1288: "1288"
+ PROV1288: "Lesobrezhe"
  PROV1289: "Tagivarak"
  PROV1290: "Kagitepos"
  PROV1291: "Lymepolis"
@@ -4927,13 +4927,13 @@
  PROV4926: "4926"
  PROV4927: "Dagraag"
  PROV4928: "Nagios"
- PROV4929: "4929"
- PROV4930: "4930"
- PROV4931: "4931"
+ PROV4929: "Goroles"
+ PROV4930: "Zlatoles"
+ PROV4931: "Lesovy Dvor"
  PROV4932: "4932"
  PROV4933: "4933"
  PROV4934: "4934"
- PROV4935: "4935"
+ PROV4935: "Bilenkiles"
  PROV4936: "4936"
  PROV4937: "4937"
  PROV4938: "4938"
@@ -4943,21 +4943,21 @@
  PROV4942: "4942"
  PROV4943: "Tetri K'ilde"
  PROV4944: "Kariana"
- PROV4945: "4945"
+ PROV4945: "Zhovtigora"
  PROV4946: "4946"
  PROV4947: "4947"
  PROV4948: "4948"
  PROV4949: "4949"
  PROV4950: "4950"
- PROV4951: "4951"
+ PROV4951: "Chervenyles"
  PROV4952: "4952"
  PROV4953: "4953"
  PROV4954: "4954"
  PROV4955: "4955"
  PROV4956: "4956"
  PROV4957: "4957"
- PROV4958: "4958"
- PROV4959: "4959"
+ PROV4958: "Dobrovka"
+ PROV4959: "Granirarda"
  PROV4960: "4960"
  PROV4961: "4961"
  PROV4962: "4962"
