Daslevania setup part 2

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -306,17 +306,17 @@
  PROV305: "Ilusjõgi"
  PROV306: "Metsaraba"
  PROV307: "Linnutee"
- PROV308: ""
- PROV309: ""
+ PROV308: "Geniborovka"
+ PROV309: "Visobrezhe"
  PROV310: ""
  PROV311: ""
  PROV312: "Gyruzygety"
  PROV313: "Hurkhzan"
  PROV314: "Karisar"
  PROV315: "Zlatodvor"
- PROV316: ""
+ PROV316: "Charnigora"
  PROV317: "Bukutyer"
- PROV318: ""
+ PROV318: "Poleshits"
  PROV319: ""
  PROV320: "Alemetsa"
  PROV321: "Oslugor"
@@ -1133,7 +1133,7 @@
  PROV1132: "Takatah" #captital city
  PROV1133: "Awlonay" #rural valley
  PROV1134: "Darygah"
- PROV1135: "Bay of Dagolli"
+ PROV1135: "Poladno"
  PROV1136: "Ribyah"
  PROV1137: "Turanez" #Goat mountain
  PROV1138: "Patrep"
@@ -4930,37 +4930,37 @@
  PROV4929: "Goroles"
  PROV4930: "Zlatoles"
  PROV4931: "Lesovy Dvor"
- PROV4932: "4932"
- PROV4933: "4933"
- PROV4934: "4934"
+ PROV4932: "Bushigai"
+ PROV4933: "Vraniles"
+ PROV4934: "Zhelonyles"
  PROV4935: "Bilenkiles"
- PROV4936: "4936"
- PROV4937: "4937"
- PROV4938: "4938"
- PROV4939: "4939"
+ PROV4936: "Zhitkovo"
+ PROV4937: "Razhigora"
+ PROV4938: "Pivkovo"
+ PROV4939: "Graniles"
  PROV4940: "4940"
- PROV4941: "4941"
- PROV4942: "4942"
+ PROV4941: "Bagrovigai"
+ PROV4942: "Visoka"
  PROV4943: "Tetri K'ilde"
  PROV4944: "Kariana"
  PROV4945: "Zhovtigora"
- PROV4946: "4946"
- PROV4947: "4947"
- PROV4948: "4948"
- PROV4949: "4949"
- PROV4950: "4950"
+ PROV4946: "Klotki"
+ PROV4947: "Dobrovo"
+ PROV4948: "Vosochno"
+ PROV4949: "Charniles"
+ PROV4950: "Nazadovo"
  PROV4951: "Chervenyles"
- PROV4952: "4952"
- PROV4953: "4953"
- PROV4954: "4954"
- PROV4955: "4955"
- PROV4956: "4956"
- PROV4957: "4957"
+ PROV4952: "Vinnica"
+ PROV4953: "Konnovo"
+ PROV4954: "Siverkova"
+ PROV4955: "Razhiles"
+ PROV4956: "Stegorod"
+ PROV4957: "Travakopn"
  PROV4958: "Dobrovka"
  PROV4959: "Granirarda"
- PROV4960: "4960"
- PROV4961: "4961"
- PROV4962: "4962"
+ PROV4960: "Starysukh"
+ PROV4961: "Zakhodkovo"
+ PROV4962: "Vinokopn"
  PROV4963: "4963"
  PROV4964: "4964"
  PROV4965: "4965"
