--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -110,6 +110,7 @@
  marstonian_elective_monarchy_reform_desc: "In this sytem the monarch is elected from the group trusted nobles to make sure the best candidate is actually the most competent."
 
  northern_ostemer_ports_group: "Ports of Northern Ostemer"
+ southern_ostemer_ports_group: "Ports of Southern Ostemer"
 
  ziemelia_ideas: "Ziemelian Ideas"
  ziemelia_ideas_bonus: "Ziemelian Ambition"
