--- a/localisation/TD_01_flavour_wedla_l_english.yml
+++ b/localisation/TD_01_flavour_wedla_l_english.yml
@@ -8,3 +8,22 @@
  wedla.3.a: "Amber truly rules the Ostemer."
  WED_togawian_jewelry: "Togawian Jewelry District"
  desc_WED_togawian_jewelry: "This province is famous for its luxurious amber jewelry."
+ 
+
+ wedla_ideas: "Wedlan Ideas"
+ wedla_ideas_start: "Wedlan Traditions"
+ wedla_ideas_bonus: "Wedlan Ambition"
+ wedla_merchant_monarchy: "Merchant Monarchy"
+ wedla_merchant_monarchy_desc: "Our location between Ostsee and Onzee has created a great opportunity for mercantile tradition to develop in Wedlan lands. Transfer of goods across Odwal is popular amongst merchants who want to avoid paying tolls in Mezonia and Uzkolia. This was an importanf factor in many of Saelian merchants visiting our ports and our people embracing their innovations, and eventually even religion."
+ wedla_wedlanska_gildija_handlowa: "Wedlanska Gildija Handlowa"
+ wedla_wedlanska_gildija_handlowa_desc: "This organization, commonly abreviated as WGH, associates all merchants in Wedlan lands. It was officialy established in 1221 in order law to better manage flow of goods across the Ostsee, however many guilds closely cooperated even before that date. The guild amassed massive wealth and quickly empowered northern Ostsee, an example of which is the recent seizing of Laran lands from indebted merchants."
+ wedla_heathen_compassion: "Heathen Compassion"
+ wedla_heathen_compassion_desc: "Trading in Marstonia and our own tradition has made our merchants more keen to see them as equals rather than someone to be exploited. After all, it's not that religion matters, but whether you can bring us profit."
+ wedla_maritime_empire: "Maritime Empire"
+ wedla_maritime_empire_desc: "Our oversea territories - most notably island of Lara and ports in Zirgukalnis - require constant management and contact with the homeland. Thankfuly, the nation is full of potential sailors willing to serve the crown."
+ wedla_princes_codex: "Codex Principis"
+ wedla_princes_codex_desc: "This collection of law was named after the prince Jerzy, who wanted to group together most important common laws in the nation which in turn would centralize and solidify the rule in the countryside. Later, this document was used as an inspiration by Bogilish kings to crack down on local nobility."
+ wedla_wedlan_glass: "Wedlan Glass"
+ wedla_wedlan_glass_desc: "Togawian glassmakers are famous for their artistry relating to common life in our lands. Being made from the refined sand gives them a unique look which makes them very popular amongst the western nobility, which sees it as piece of 'oriental' culture."
+ wedla_lessons_of_war: "Lessons of War"
+ wedla_lessons_of_war_desc: "Frequent and brutal clashes with Ziemelians made our military very prone to adjust their strategy to achieve the least amount of losses to grant up the upper hand in the next war. Each battle is thoroughly studied and the knowledge is passed down to the new military leaders. This was greatly shown during our involvement in the League of Lippstadt and by our soldiers for hire during Mercenary Wars."
