--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -119,5 +119,5 @@
  maduni_region: "Maduni"
  amulewo_region: "Amulewo"
  oleania_region: "Oleania"
- daslavenia_region: "Daslavenia"
+ daslevenia_region: "Daslevenia"
  vorrasia_region: "Vorracia"
