Wedla missions update

--- a/localisation/TD_01_flavour_donucakar_l_english.yml
+++ b/localisation/TD_01_flavour_donucakar_l_english.yml
@@ -9,7 +9,7 @@
  donucakar_donucian_legacy: "Donucian Legacy"
  donucakar_donucian_legacy_desc: "Sometimes people ask themselves 'How did that Anavatic tribe migrated all the way to Confinia?'. The answer is simple - by conquest. It was a time of Pamkusean and Zakarturi weakness which conflates with an era of great migrations, which forced Donucian people to settle in a new land."
  donucakar_ostsee_competition: "Ostsee Competition"
- donucakar_ostsee_competition_desc: "Lying on the eastern shore of Ostsee we were always in a position for international trade. For the most part we controlled the flow of goods from the far east thanks to the Mezonian Strait, but now other nations started to increase their control over the supply lines. We can't fall behind if our economy wants to survive."
+ donucakar_ostsee_competition_desc: "Lying on the eastern shore of Ostsee we were always in a position for international trade. For the most part we controlled the flow of goods from the far east thanks to the Mezonian Straits, but now other nations started to increase their control over the supply lines. We can't fall behind if our economy wants to survive."
  donucakar_meritocratic_military: "Meritocratic Military"
  donucakar_meritocratic_military_desc: "Harsh times create strong men, as they say. And many of those men are not part of the noble estate, which for the most part dominated the military. This has led to our rulers to abolish standard noble militias and titles based on loyalty to instead turn our military into a proper force, made out of professional officers and engineers."
  donucakar_yanlan_monasteries: "Yanlan Monasteries"
