--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -21,7 +21,7 @@
  upper_camaria_tradenode: "Bria"
  argenia_tradenode: "Argenia"
  dorchia_tradenode: "Dorchean Isles"
- mezonian_strait_tradenode: "Mezonian Strait"
+ mezonian_strait_tradenode: "Mezonian Straits"
  eyinar_tradenode: "Nahrakdar"
  fawud_tradenode: "Sayaanud"
  muzbah_tradenode: "Kotorat"
