--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -399,7 +399,7 @@
  PROV_ADJ398: "Tauragiris"
  PROV_ADJ399: "Hapian Bay"
  PROV_ADJ400: "Forsi"
- PROV_ADJ401: "Mezonian Strait"
+ PROV_ADJ401: "Mezonian Straits"
  PROV_ADJ402: "Zyntar"
  PROV_ADJ403: "Zirgukalnis"
  PROV_ADJ404: "Jasat"
