--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -399,7 +399,7 @@
  PROV398: "Tauragiris"
  PROV399: ""
  PROV400: "Forsi"
- PROV401: "Mezonian Strait"
+ PROV401: "Mezonian Straits"
  PROV402: "Zyntar"
  PROV403: "Zirgukalnis"
  PROV404: "Jasat"
