--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -100,3 +100,13 @@
 
  WED_empire: "Wedlan Empire"
  WED_empire_ADJ: "Wedlan"
+
+ wedla.4.t: "Wedlan Proposal"
+ wedla.4.desc: "Our rebellious attitude towards the Bogilish court was brought to the attention of Wedlan, which now offer us a proposal - more autonomy, but we will be forced to support them in their war against Bogiland. Should we accept?"
+ wedla.4.a: "Accept"
+ wedla.4.b: "Decline"
+ wedla.5.t: "Wedlan Furs"
+ wedla.5.desc: "Our growing influence in the Furmaric fur trade has greatly upset not only the Ehrens, but also the Chantlian entreprenuers. Flooding the market proved to be useful in amounting a lot of wealth in a short period of time, greatly hurting our rivals."
+ wedla.5.a: "Very Good."
+ wedlan_fur: "Wedlan Furs"
+ WED_fur_rivalry: "Fur Rivalry"
