--- a/localisation/TD_parliaments_l_english.yml
+++ b/localisation/TD_parliaments_l_english.yml
@@ -5,3 +5,4 @@
  CAT_parliament_name: "Cunnadhul"
  west_yermic_group_parliament_name: "Yekhen"
  OST_parliament_name: "Händlerversammlung"
+ WED_parliament_name: "Rada"
