Daslevanian Cossacks estate changes

--- a/localisation/TD_01_flavour_daslevania_l_english.yml
+++ b/localisation/TD_01_flavour_daslevania_l_english.yml
@@ -4,8 +4,8 @@
  velypshen_ideas_bonus: "Velypsheni Ambition"
  velypshen_taming_the_steppes: "Taming the Steppes"
  velypshen_taming_the_steppes_desc: "The Steppes in the East are vast and expansive, if we want to utilize this fertile land to it's maximum potential, we need to manage our resources in a careful way."
- velypshen_amagari_integration: "Amagari Integration"
- velypshen_amagari_integration_desc: "Amagari are the people of the steppes, and they know those steppes the best. Maintaing good relations with them should be crucial to our state, and integration of them into our army should be our priority."
+ velypshen_konmaristers_integration: "Konmaristers Integration"
+ velypshen_konmaristers_integration_desc: "Konmaristers are the people of the steppes, and they know those steppes the best. Maintaing good relations with them should be crucial to our state, and integration of them into our army should be our priority."
  velypshen_obtuzhits_cavalry: "Obtuzhits Cavalry"
  velypshen_obtuzhits_cavalry_desc: "Obtuzhits Cavalry is a core of our cavalry, making our already heavy horse-reliant armies even more fearsome amongst our enemies."
  velypshen_trade_across_kakigia: "Trade Across Kakigia"
