--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -25,6 +25,7 @@
  #Cossacks
  estate_ratsunikud: "Ratsunikud"
  estate_kakigos: "Kakigos"
+ estate_konmaristers: "Konmaristers"
  estate_amagari: "Amagari"
  #peasants
  estate_pastorialists: "Pastorialists"
