--- a/localisation/TD_01_flavour_daslevania_l_english.yml
+++ b/localisation/TD_01_flavour_daslevania_l_english.yml
@@ -16,3 +16,22 @@
  velypshen_wheat_abundance_desc: "Since late XVIth century, the Kakigian steppe has been abundant in wheat, and reaping and selling said wheat to the Mysentrians was a fruitful endeavour back then."
  velypshen_absolutist_state: "Absolutist State"
  velypshen_absolutist_state_desc: "Velypshen had always big bureaucracy inherited after the Zakarturians, and to bring the estates into the fold, they have taken lessons from the Bogiler and introduced absolutist reforms in their state."
+ 
+ 
+ kurtian_ideas: "Kurtian Ideas"
+ kurtian_ideas_start: "Kurtian Traditions"
+ kurtian_ideas_bonus: "Kurtian Ambition"
+ kurtian_eneratian_mucheniks: "Eneratian Mucheniks"
+ kurtian_eneratian_mucheniks_desc: "We are on the bulwark of the eneratian faith, and many of our brethren in faith go on a missions eastward, but not many of them return, and those who end up dying in the east in the name of our faith will be forever remembered as Mucheniks."
+ kurtian_control_over_the_straits: "Control over the Straits"
+ kurtian_control_over_the_straits_desc: "With our Navy's presence in the Esydian bay, we control all important naval trade routes that go southward, which grants us levereage to demand tolls from passing-by merchants."
+ kurtian_lush_forests_of_kurtia: "Lush Forests of Kurtia"
+ kurtian_lush_forests_of_kurtia_desc: "Kurtia is located in the middle of the great Lesova forests, and with such amount of wood we can cut it down to our hearts content and never run out, and we should utilize that to further the state's wealth."
+ kurtian_first_medical_academy: "First Medical Academy"
+ kurtian_first_medical_academy_desc: "After the premature death of duke Andriy that left Kurtia monarchless for some time, the Interrex has funded the local community of doctors to found one of the first medical academies in the world, to increase chances of future monarchs at surviving illnesses."
+ kurtian_konmaristers_expertise: "Konmaristers Expertise"
+ kurtian_konmaristers_expertise_desc: "With Eastward expansion, and migration of people, we have notable population of Konmaristers in our country, we could utilize their wisdom in horseriding to expand our cavalry regiments."
+ kurtian_pompous_court: "Pompous Court"
+ kurtian_pompous_court_desc: "From the early XVIth the Kurtian court has been known for it's pompousness, and how much it vaunted it's own glory."
+ kurtian_dzeshetsnik_army_standard: "Dzeshetsnik Army Standard"
+ kurtian_dzeshetsnik_army_standard_desc: "With how quick warfare changed after gunpowder made it's entrance into the west, we had to adapt our recruitment and organization systems to guarantee our armies wouldn't desent into chaos during the battle, so we divided every unit into Dzeshetsniks, that is a company of exactly ten men."
