--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -186,3 +186,6 @@
 
  onerkia_nation_title: "Unite Onerkans @ONE"
  onerkia_nation_desc: "Fighing each other we will conquer nothing. As a one state, we will conquer the world!"
+ 
+ daslevania_nation_title: "Unite Daslevania @DSL"
+ daslevania_nation_desc: "With the collapse of the Bunelisuli Empire, there is a power vacuum in the Kakigian region. It is time we utilize this to forge our own empire!"
