wedla + other stuff

--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -50,7 +50,7 @@
  desc_WED_overlords_of_furmaria: "Furmaria is ours for the taking, without anyone being able to stop us."
  WED_western_bretherens_tt1: "Gain claims on every province owned by Bogiland or its subjects in §YBogiland§! region."
  WED_western_bretherens_tt2: "\nEvery vassal of §YBogiland§! that meets the mission requirements will become our subject in the next war against Bogiland. It will cost §Y50§! diplomatic power per country."
- WED_western_bretherens_tt3: "Has opinion modifier §YImproved Relations§! of at least §Y95§!."
+ WED_western_bretherens_tt3: "Has opinion modifier §YImproved Relations§! of at least §Y100§!."
  WED_northern_cities: "Wedlan Prosperity"
  desc_WED_northern_cities: "Only under our rule these cities can truly thrive."
  WED_cities_of_ostemer_tt1: "If §YBurghers§! estate loyalty is §Y75§! or greater:"
@@ -96,7 +96,9 @@
  WED_MRS: "Wedla-Marstonia"
  WED_MRS_ADJ: "Wedlan-Marstonian"
  WED_unison_of_nations: "Unison of Nations"
+ desc_WED_unison_of_nations: "In the modern world, there is no place for our squabbling. We must stand united, as a one state."
  WED_centralization_of_the_state: "Cetralization of the State"
+ desc_WED_centralization_of_the_state: "In order to solidify our rule, we must crack down on local lords, burghers and everyone opposing us."
 
  WED_empire: "Wedlan Empire"
  WED_empire_ADJ: "Wedlan"
@@ -106,7 +108,16 @@
  wedla.4.a: "Accept"
  wedla.4.b: "Decline"
  wedla.5.t: "Wedlan Furs"
- wedla.5.desc: "Our growing influence in the Furmaric fur trade has greatly upset not only the Ehrens, but also the Chantlian entreprenuers. Flooding the market proved to be useful in amounting a lot of wealth in a short period of time, greatly hurting our rivals."
- wedla.5.a: "Very Good."
+ wedla.5.desc: "Our growing influence in the Furmaric fur trade has greatly upset not only the Ehrens, but also the Chantlian entreprenuers. Many of our mechants want to profit from this newfound enterprise. On the other hand, flooding the market would certainly be useful in amounting a lot of wealth for the crown in a short period of time, greatly hurting our rivals."
+ wedla.5.a: "Furs! Furs for everyone!"
+ wedla.5.b: "We should take part in this monopoly..."
  wedlan_fur: "Wedlan Furs"
+ wedlan_fur_2: "Wedlan Furs"
  WED_fur_rivalry: "Fur Rivalry"
+
+ marstonian_lumber_mod: "Marstonian Lumber"
+ desc_marstonian_lumber_mod: "Dense forests of Uzkolia regrow very rapidly, allowing us to profit from the lumber much more efficiently."
+ WED_doniepr_merchants: "Merchants of Doniepr"
+ desc_WED_doniepr_merchants: "Deals made with prince Ludwik Prawy gave burghers from Doniepr a lot of privileges for their support."
+ togawy_gems_mod: "Togawy Jewelry"
+ desc_togawy_gems_mod: "Jewelry produced in Togawy is known for its use of amber, very popular among the Ostemer elites."
