--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -19,6 +19,7 @@
  estate_saltoir: "Sáltóir"
  estate_bekhers: "Bekhers"
  #Merchants
+ estate_gildery: "Gilderzy"
  estate_oligarchs: "Oligárches"
  estate_brysawgar: "Bryšawgari"
  estate_adiawar: "Ádiawar"
