--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -345,7 +345,7 @@
  PROV344: "Ridyahani Coast"
  PROV345: "Blazma"
  PROV346: "Hercogaosta"
- PROV347: "Sea of Laima"
+ PROV347: "Eberland Bay"
  PROV348: "Sena Egle"
  PROV349: ""
  PROV350: "Vaviejas"
@@ -410,7 +410,7 @@
  PROV409: "Aivijas"
  PROV410: "Sata"
  PROV411: "Remtiris"
- PROV412: "Eberland Bay"
+ PROV412: "Revorian Bay"
  PROV413: "Resella"
  PROV414: "Voliunga"
  PROV415: "South Albasatian Coast"
@@ -1142,7 +1142,7 @@
  PROV1141: "Sapalon" #north point
  PROV1142: "Talyaqet"
  PROV1143: "Tisn"
- PROV1144: "Yanlan Coast" 
+ PROV1144: "Lacerian Sea" 
  PROV1145: "Gebula"
  PROV1146: "Subat"
  PROV1147: "Xatani" #dangerous pass
@@ -4961,7 +4961,7 @@
  PROV4960: "Starysukh"
  PROV4961: "Zakhodkovo"
  PROV4962: "Vinokopn"
- PROV4963: "4963"
+ PROV4963: "Marvirida"
  PROV4964: "4964"
  PROV4965: "4965"
  PROV4966: "4966"
