--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -118,6 +118,11 @@
  marstonian_lumber_mod: "Marstonian Lumber"
  desc_marstonian_lumber_mod: "Dense forests of Uzkolia regrow very rapidly, allowing us to profit from the lumber much more efficiently."
  WED_doniepr_merchants: "Merchants of Doniepr"
- desc_WED_doniepr_merchants: "Deals made with prince Ludwik Prawy gave burghers from Doniepr a lot of privileges for their support."
+ desc_WED_doniepr_merchants: "Deals made with prince Ludwik Prawy gave burghers from Doniepr a lot of privileges for their support.\n\nThis province modifier can be removed through §YThe Merchants of Doniepr§! event, triggered after reaching §Y65%§! trade share in §YDoniepr§! trade node."
  togawy_gems_mod: "Togawy Jewelry"
  desc_togawy_gems_mod: "Jewelry produced in Togawy is known for its use of amber, very popular among the Ostemer elites."
+
+ wedla.6.t: "The Merchants of Doniepr"
+ wedla.6.desc: "Since the city of Doniepr fell into our hands after their rebellion against duke of Kurjawa, local burghers always caused trouble in the realm. Constantly trying to distance themselves from the court that protected them, they demand less taxation, less levies and even special mercantile rights.\nAs we consolidate power in the western lands, our reliance on their expertise and connections is becoming smaller and smaller. In the last ditch attempt to have influence in the region, local traders organized a large manifestation led by charismatic Ruprecht Wysocek, demanding to speak with the crown."
+ wedla.6.a: "We will grant them their autonomy."
+ wedla.6.b: "Do they think they still have any power?"
