--- a/localisation/TD_01_flavour_daslevania_l_english.yml
+++ b/localisation/TD_01_flavour_daslevania_l_english.yml
@@ -35,3 +35,21 @@
  kurtian_pompous_court_desc: "From the early XVIth the Kurtian court has been known for it's pompousness, and how much it vaunted it's own glory."
  kurtian_dzeshetsnik_army_standard: "Dzeshetsnik Army Standard"
  kurtian_dzeshetsnik_army_standard_desc: "With how quick warfare changed after gunpowder made it's entrance into the west, we had to adapt our recruitment and organization systems to guarantee our armies wouldn't desent into chaos during the battle, so we divided every unit into Dzeshetsniks, that is a company of exactly ten men."
+ 
+ morvanian_ideas: "Morvanian Ideas"
+ morvanian_ideas_start: "Morvanian Traditions"
+ morvanian_ideas_bonus: "Morvanian Ambition"
+ morvanian_end_the_charadeidian_yoke: "End the Charadeidian Yoke"
+ morvanian_end_the_charadeidian_yoke_desc: "The Charadeidian Yoke is weak, and nearing it's timely demise. It is time we strike while the iron is hot, and regain our freedom from Bunelisuli opressors!"
+ morvanian_golden_cloth_of_zlatodvor: "Golden Cloth of Zlatodvor"
+ morvanian_golden_cloth_of_zlatodvor_desc: "Zlatodvor, which means Golden Court, has earned it's name thanks to famous golden cloth that is produced there, and is one of the local guilds most guarded secrets. It is seen as very prestigious in the Kakigia and Chilverchia, and thanks to that we can revel in glory."
+ morvanian_educated_courtsmen: "Educated Courtsmen"
+ morvanian_educated_courtsmen_desc: "Having educated advisors and other courtsmen is very beneficial for our court, and by extension - state, which means we can achieve better scientific results faster."
+ morvanian_bunelisuli_connections: "Bunelisuli Connections"
+ morvanian_bunelisuli_connections_desc: "Despite the fall of Bunelisuli empire in the west, we still maintain notable trade connections with merchants in the east, and we can utilize that to extend our grasp on the Western Kakigian Trade."
+ morvanian_konmaristers_regiments: "Konmarister Regiments"
+ morvanian_konmaristers_regiments_desc: "Konmaristers have served our state well, and remained loyal throughout the time of the wars with the Charadeidians. It is time we reward their loyalty with expanded regiments rights, making them core of our army."
+ morvanian_standarized_peasant_recruitment: "Standarized Peasant Recruitment"
+ morvanian_standarized_peasant_recruitment_desc: "Many peasants have fled their feudal overlords in Chilverchia and Confinia eastward, towards our country. Instead of forcing them into our armies, we should extempt them from feudal work in the wheatfields just for a few years unsolicited army service."
+ morvanian_diplomatic_corpus: "Diplomatic Corpus"
+ morvanian_diplomatic_corpus_desc: "If we want to keep up with our neighbour's plots and other mischiefs, we need to invest into sizeable Diplomatic Corpus that we could send everywhere when deemed necessary."
