--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -143,7 +143,7 @@
 
 
 
- samadio_taedian: "Samadio-Mysentrian"
+ mysentrian_pagan: "Mysentrian Pagan"
 
  marstonic_pantheon: "Viddaci"
  marstonic_pantheon_religion_desc: "Zbojano-Marstonian pantheon of gods was widely practiced in north-eastern mysentria until the arrival of Saelianism. They believe in a court of gods led by Dievo, the god of power and loyalty. Many of their myths revolve around struggle of a man against nature and divine punishment."
