--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -94,13 +94,13 @@
  merhaan.1003.desc: "Yermic prophets shared many obvious truths which helped maqitan societies to develop their social structure and interact with each other. Methods of which the information of these great men spread will greatly benefit us."
  merhaan.1003.a: "Closer to truth"
  harmonized_yermic: "Harmonized Yermic"
- desc_harmonized_yermic: "We have succesfully harmonized with Yermisc"
+ desc_harmonized_yermic: "We have succesfully harmonized with Yermics"
 
- merhaan.1004.t: "Harmonization of Samadio-Mysentrian Faiths"
+ merhaan.1004.t: "Harmonization of Mysentrian Paganic Faiths"
  merhaan.1004.desc: "Our shamans found out that not everyone living in Mysentria believes in authority of Saelius. These faiths were fading away because of mass convertions to Saelianism. Integrating them into our church made us preserve these local faiths and document their knowledge that is unique for them."
  merhaan.1004.a: "Closer to truth"
- harmonized_samadio_taedian: "Harmonized Samadio-Mysentrian"
- desc_harmonized_samadio_taedian: "We have succesfully harmonized with Samadio-Mysentrians"
+ harmonized_mysentrian_pagan: "Harmonized Mysentrian Pagans"
+ desc_harmonized_mysentrian_pagan: "We have succesfully harmonized with Mysentrian Pagans"
 
  merhaan.1005.t: "Harmonization of Anhativaz Faiths"
  merhaan.1005.desc: "Traditions of Anhativaz faiths goes back to first Zakarturi Empire, their obsession about chronicling their past and remembering about their old glory allows us to get look into older times. Now we have access to their libraries and their chroniclers, with them our knowledge will never die."
